public/assets/css/pdd.css
* {
    outline: 0;
}

/* width */
::-webkit-scrollbar {
    width: 5px; /* Y size */
    height: 5px; /* X size */
}
.modal-body::-webkit-scrollbar {
    width: 0;
}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
}
/* Handle */
::-webkit-scrollbar-thumb {
    background: #ccc;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #aaa;
}


.side-control { margin: auto 10vw; }
.icon { margin-bottom: 3px; } /* Spectre icon */


/* Header */
header {
    padding: 8px 15px;
    border-bottom: 1px solid #ccc;
}
header .icon.icon-menu {
    margin-bottom: .2rem;
}
.avatar-dropdown {
    left: unset !important;
    right: 0;
    width: 250px;
    max-height: 100vw !important;
}

/* Footer */
footer {
    padding: .5rem 1.5rem;
    margin: -.5rem;
    margin-top: 1rem;
    text-align: right;
    border-top: 1px solid #ddd;
}

/* Off-Canvas Overwrie */
.off-canvas .off-canvas-sidebar {
    min-width: 13rem;
}
.off-canvas-content {
    padding: 0 !important;
}

/* Font Awesome */
i[class*="fa"] {
    width: 16px;
    height: 16px;
    text-align: center;
}

/* Sidebar */
.sidebar {
    padding: .5rem;
}
.sidebar a,
.sidebar .accordion .accordion-header {
    display: block;
    padding: .4rem;
    text-decoration: none;
}
.sidebar a:hover,
.sidebar .accordion .accordion-header:hover {
    background: #eee;
}
.sidebar a:focus {
    box-shadow: none;
}
.sidebar .accordion-body a {
    margin-left: 0.75rem;
    padding-left: .8rem;
    border-left: 1px solid #b2b4b6;
}
.sidebar i {
    color: #000;
    margin-right: .4rem;
}
.sidebar .accordion-body {
    margin-bottom: 0;
}


/* Sesuaikan Paingation */
.pagination {
    justify-content: center;
}

/* Suaiankan Table */
.table-container {
    overflow: auto;
    width: calc(100vw - 23px);
    margin: 3px;
}
.table {
    white-space: nowrap;
}

/* Seuaikan Modal */
.modal-body .content > form {
    margin-top: -.8rem;
    margin-bottom: .2rem;
}

/* Loading */
.loading.loading-full {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.8);
}


/** Dashboard */
.dashboard .stats {
    min-width: 100px;
    min-height: 100px;
    padding: 1rem;
    padding-bottom: .5rem;
    font-size: x-large;
    font-weight: bold;
    text-align: right;
    background: crimson;
    color: #fff;
}
.dashboard .stats .title {
    margin: -1rem;
    margin-bottom: 0;
    padding: .5rem;
    padding-left: 1rem;
    font-size: medium;
    font-weight: normal;
    text-align: left;
}
.dashboard .stats i {
    display: block;
    font-size: xx-large;
    margin-bottom: 1rem;
}

